[gd_scene load_steps=3 format=3 uid="uid://bqvgut40x8oo3"]

[ext_resource type="PackedScene" uid="uid://lrx7nye1s5e4" path="res://addons/DialogHelperTool/Game/Person/Person.tscn" id="1_pkm7d"]
[ext_resource type="Script" path="res://addons/DialogHelperTool/Game/Person/PersonLayout.gd" id="1_shvtx"]

[node name="PersonLayout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shvtx")

[node name="PersonLeft" parent="." instance=ExtResource("1_pkm7d")]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
mouse_filter = 2

[node name="PersonMiddleLeft" parent="." instance=ExtResource("1_pkm7d")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 0.4
offset_right = -1.14441e-05
mouse_filter = 2

[node name="PersonMiddle" parent="." instance=ExtResource("1_pkm7d")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_right = 0.6
offset_left = -1.14441e-05
offset_right = -4.57764e-05
mouse_filter = 2

[node name="PersonMiddleRight" parent="." instance=ExtResource("1_pkm7d")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_right = 0.8
offset_left = -4.57764e-05
offset_right = -2.28882e-05
mouse_filter = 2

[node name="PersonRight" parent="." instance=ExtResource("1_pkm7d")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
offset_left = -2.28882e-05
mouse_filter = 2
